fix some IDE warnings